<resources>
    <string name="app_name">Flavor Feed</string>
    <string name="default_web_client_id">26617880897-b4i8hd5skigptil3tkq87nqkb2akuk0i.apps.googleusercontent.com</string>
    <string name="reel_title">Reel Title</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="active_orders">Active Orders</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="my_reels">My Reels</string>
    <string name="add_item">Add Item</string>
    <string name="order_id">Order ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="status">Status</string>
    <string name="total_price">Total Price</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="stripe_publishable_key">pk_test_51SEjk8AtRQUYdXhWjSg5BMTdsvRdH4jJcllY1aygfB36eQyTHwDbRUKMBQbroLBmUGK9gpHBFxCQwhqrXxONOTlX003ULuDrrI</string>
    <string name="backend_url">https://foodapp-backend-vcay.onrender.com</string>
    <string name="map_url">https://location-vkcz.onrender.com</string>
    <string name="comment_count">Comments %1$d</string>



</resources>