<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp"
    tools:context=".admin.AdminDashboardActivity">

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:layout_marginBottom="12dp"
        android:paddingStart="24dp"
        android:text="@string/dashboard"
        android:textColor="@color/primary"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />
    <!-- Tabs -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/accent"
        app:tabIndicatorHeight="4dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/primary"
        app:tabTextColor="@color/accentForeground">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_orders" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_menu" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_reels" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/primary"
        app:itemIconTint="@color/primaryForeground"
        app:itemTextColor="@color/primaryForeground"
        app:menu="@menu/admin_bottom_nav_menu" />
</LinearLayout>